<resources>
    <string name="app_name">MediConnect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_applications">Applications</string>
    <string name="menu_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="job_details">Job Details</string>
    <string name="apply_now">Apply Now</string>
    <string name="job_location">Location</string>
    <string name="job_salary">Salary</string>
    <string name="job_type">Type</string>
    <string name="job_description">Description</string>
    <string name="job_requirements">Requirements</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <!-- Applications -->
    <string name="no_applications">You haven\'t applied for any jobs yet</string>
    <string name="all_applications">All</string>
    <string name="pending_applications">Pending</string>
    <string name="accepted_applications">Accepted</string>
    <string name="rejected_applications">Rejected</string>
    <string name="withdraw_application">Withdraw Application</string>
    <string name="application_details">Application Details</string>
    <string name="view_job">View Job</string>
    <string name="cancel">Cancel</string>
    <string name="application_withdrawn_success">Application has been withdrawn successfully</string>
    <string name="withdraw_confirmation">Are you sure you want to withdraw this application? This action cannot be undone.</string>
</resources>
