<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_jobs" />
        <item
            android:id="@+id/nav_applications"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_applications" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="Logout" />
        </menu>
    </item>
</menu>
