<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mediconnect.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_jobs"
        android:name="com.mediconnect.app.ui.jobs.JobsFragment"
        android:label="@string/menu_jobs"
        tools:layout="@layout/fragment_jobs" />

    <fragment
        android:id="@+id/nav_applications"
        android:name="com.mediconnect.app.ui.applications.ApplicationsFragment"
        android:label="@string/menu_applications"
        tools:layout="@layout/fragment_applications" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mediconnect.app.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mediconnect.app.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
